<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/successContainer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/that"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/that_s_correct"
            android:textColor="@color/black"
            android:textSize="@dimen/app_text_size_large" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/pop_margin"
            android:layout_marginRight="@dimen/pop_margin"
            android:background="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/std_margin"
            android:gravity="center"
            android:text="@string/_1_point"
            android:textColor="@color/black"
            android:textSize="@dimen/app_text_size_large"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/pop_margin"
            android:layout_marginRight="@dimen/pop_margin"
            android:background="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forYou"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/for_you"
            android:textColor="@color/black"
            android:textSize="@dimen/app_text_size_large" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_margin"
        android:background="@color/red"
        android:gravity="center"
        android:padding="@dimen/std_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/app_text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/successContainer"
        tools:text="Hello how are you" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_margin"
        android:background="@drawable/buttons_bg"
        android:padding="@dimen/std_padding"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textSize="@dimen/app_text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />


</androidx.constraintlayout.widget.ConstraintLayout>